--- a/index.html
+++ b/index.html
@@ -209,81 +209,76 @@
   </footer>
 
 <script>
-  const ideaInput = document.getElementById("ideaInput");
-  const ideaList = document.getElementById("ideaList");
-
-  function getIdeas() {
-    return JSON.parse(localStorage.getItem("ideas")) || [];
-  }
-
-  function saveIdeas(ideas) {
-    localStorage.setItem("ideas", JSON.stringify(ideas));
-  }
-
-  function formatDate() {
-    const now = new Date();
-    return now.toLocaleDateString("pt-BR") + " " + now.toLocaleTimeString("pt-BR");
-  }
+  <script>
+  const STORAGE_KEY = "gpj_ideaflow_ideas";
+  let ideas = [];
 
   function loadIdeas() {
-    const ideas = getIdeas();
-    ideaList.innerHTML = "";
-
-    ideas.forEach(idea => {
-      const li = document.createElement("li");
-      li.style.marginBottom = "14px";
-
-      li.innerHTML = `
-        <strong>${idea.text}</strong><br>
-        <small>${idea.date}</small><br>
-        <button onclick="editIdea(${idea.id})">✏️ Editar</button>
-        <button onclick="deleteIdea(${idea.id})">🗑️ Excluir</button>
-      `;
-
-      ideaList.appendChild(li);
-    });
+    const saved = localStorage.getItem(STORAGE_KEY);
+    ideas = saved ? JSON.parse(saved) : [];
+    renderIdeas();
   }
 
-  function saveIdea() {
-    const text = ideaInput.value.trim();
-    if (!text) return;
+  function saveIdeas() {
+    localStorage.setItem(STORAGE_KEY, JSON.stringify(ideas));
+  }
 
-    const ideas = getIdeas();
+  function addIdea() {
+    const input = document.getElementById("ideaInput");
+    if (!input.value.trim()) return;
 
-    ideas.push({
-      id: Date.now(),
-      text,
-      date: formatDate()
+    const now = new Date().toISOString();
+
+    ideas.unshift({
+      id: crypto.randomUUID(),
+      content: input.value.trim(),
+      createdAt: now,
+      updatedAt: now,
+      archived: false
     });
 
-    saveIdeas(ideas);
-    ideaInput.value = "";
-    loadIdeas();
+    input.value = "";
+    saveIdeas();
+    renderIdeas();
   }
 
   function editIdea(id) {
-    const ideas = getIdeas();
     const idea = ideas.find(i => i.id === id);
-    if (!idea) return;
-
-    const newText = prompt("Edite sua ideia:", idea.text);
+    const newText = prompt("Editar ideia:", idea.content);
     if (!newText) return;
 
-    idea.text = newText.trim();
-    idea.date = formatDate();
-
-    saveIdeas(ideas);
-    loadIdeas();
+    idea.content = newText;
+    idea.updatedAt = new Date().toISOString();
+    saveIdeas();
+    renderIdeas();
   }
 
   function deleteIdea(id) {
-    let ideas = getIdeas();
     ideas = ideas.filter(i => i.id !== id);
-    saveIdeas(ideas);
-    loadIdeas();
+    saveIdeas();
+    renderIdeas();
+  }
+
+  function renderIdeas() {
+    const list = document.getElementById("ideasList");
+    list.innerHTML = "";
+
+    ideas.forEach(idea => {
+      const li = document.createElement("li");
+      li.innerHTML = `
+        <span>${idea.content}</span>
+        <div>
+          <button onclick="editIdea('${idea.id}')">✏️</button>
+          <button onclick="deleteIdea('${idea.id}')">🗑️</button>
+        </div>
+      `;
+      list.appendChild(li);
+    });
   }
 
   loadIdeas();
+</script>
+
 </script>
 </body>
 </html>
